--- a/Kab_Tifyar 0.1
+++ b/Kab_Tifyar 0.1
@@ -43,6 +43,7 @@ S wawal i ferrun timsal.
 Ɣef unyir-is. 
 Twalam mi ccercuṛent tmiqqwa n tidi fell-as. 
 Rekkbent-tt tawliwin. 
+Ussan-d imeṭṭawen weḥd-nsen. 
 D tidi n laɛtab d uxeddim. 
 Texleḍ yakk, ur tfehmeḍ iqiḥ. 
 D akal n lejdud. 
@@ -107,7 +108,8 @@ llan ttmeslayen.
 Uɣalent-d seg wanda yebɛed. Sɛeddan yimawlan-nsent mačči d kra.
 Ɣur-sen ula d tirbaɛin yettusellḥen yiwet n teswiɛt. 
 Lliɣ ttqeṣṣireɣ d lǧar-nneɣ. 
-Mi ara d-iḥekku, ttṛuḥun-d imeṭṭi. Ttwaliɣ-tt am wakken d tamurt tabeṛṛanit. 
+Mi ara d-iḥekku, ttṛuḥun-d imeṭṭi.
+Ttwaliɣ-tt am wakken d tamurt tabeṛṛanit. 
 Aṭas n temsal deg i ɣ-cuban, s wakken ttwaliɣ. 
 Ur d-sbanayen ara aya.
 Tifrat d tis-snat-nni. 
@@ -119,7 +121,8 @@ Dɣa ulac ciṭ n seksu?
 Sɛiɣ tismin ɣef Teqbaylit-iw, bɣiɣ ad tufrar nnig n tiyaḍ. 
 I wakken ad rnun tutlayin-nsen deg umaḍal umḍin.
 Ma tedda-tt akka, ilaq ad nɛiwed leḥsab. 
-Taqbaylit i yuɣalen d tutlayt tunsibt. Ma d tiyaḍ ad ttwattunt.
+Taqbaylit i yuɣalen d tutlayt tunsibt. 
+Ma d tiyaḍ ad ttwattunt.
 S teɣzi n tudert-im. 
 S teɣzi n tudert-ik. 
 S teɣzi n tudert-nwen.
@@ -130,7 +133,8 @@ Ala a Feṭṭuma.
 Bɣan ad banen d inselmen akken ad ten-qeblen wiyaḍ. 
 Ttilin d ineslem akken kan ad ṛuḥeɣen ɣer lǧennet seld mi mmuten. 
 Iqbayliyen d lkuffar, neɣ ur teẓriḍ ara? 
-Tanemmirt i wid yezwaren. Taqbaylit send taẓallit. 
+Tanemmirt i wid yezwaren. 
+Taqbaylit send taẓallit. 
 Tteḥnunufen ar iḍarren n wid i ten-iḥeqqren, glan yes-nneɣ. 
 Glan yes-s. 
 Glan yes-i. 
@@ -163,7 +167,8 @@ Ur netteki ara di tikerkas-nsen.
 Nukni d iqbayliyen nteddu s ṛẓana d lemqadra, ɣef tidet. 
 Nezmer ad nesefhem atmaten-nneɣ, ma d wiyaḍ dayen yewwi-ten wasif. 
 Umneɣ ad ɣ-d-fken tameẓẓuɣt ma nṛuḥ-asen s ttawil. 
-Ula d nutni ḥemmlen taqbaylit. Mazal kan ur fhimen ara timsal.
+Ula d nutni ḥemmlen taqbaylit.
+Mazal kan ur fhimen ara timsal.
 Tanemmirt sarameɣ tfehmeḍ d tamuɣli innu.
 Seg wid yetthuddun ayla-nsen neɣ seg wid ibennun? 
 Tthuddun deg ayla-nsen, ssalayen deg ayla n wiyiḍ.
@@ -190,7 +195,8 @@ Xedmen kan akka ndekwalen-d mmektan-d.
 D aɛeggal di tdukla tanaddalt n tɣiwant.
 Ixwanǧiyen bɣan ad awin tamurt n leqbayel yid-sen.
 Siwlet-as ad awen-d yernu seg-sent.
-S uhuzzu n tuyat i ttmeslayen. Ttjaren s yisem n Leqbayel. 
+S uhuzzu n tuyat i ttmeslayen.
+Ttjaren s yisem n Teqbaylit. 
 Akka is-neslemden. 
 Zuɣuren-ten am ulli akken i d-asen-yehwa.
 Ad teḥku tlemast i ceṭ. 
@@ -202,7 +208,8 @@ Ass-nwen d aseɛdi d amerbuḥ.
 Anwa-t wagi i-d-yeṭṭallayen?
 Yelsa-d tacacit. 
 Akka i d amdan! 
-Ad yeg Ṛebbi asqamu-s di ljenet. Yettarra-tt-id yall tikkelt fell-i.
+Ad yeg Ṛebbi asqamu-s di ljenet. 
+Yettarra-tt-id yall tikkelt fell-i.
 ladɣa d netta i yi-yuran tabrat deg umkan-iw.
 Amek-ik akkenni wezwal n tezlit-nni? 
 Tanemmirt, d tikti igarzen. 
@@ -298,7 +305,8 @@ Ma ara ɣ-d-yaru tabrat nettḥulfu am akken yid-neɣ i yella.
 Twehmeḍ? 
 Wehmeɣ kan. 
 Qqimeɣ kan d ttewḥid. 
-Ad as-tiniḍ ma d winna yakk. Ṭṭuqtent tuccḍiwen deg tira-k mačči d kra. 
+Ad as-tiniḍ mačči d winna i sneɣ yakk. 
+Ṭṭuqtent tuccḍiwen deg tira-k mačči d kra. 
 Dacu n llebsa, dacu d lḥeṭṭa. 
 Ula d widak iwulfan kukran. 
 Yal ass.
@@ -312,7 +320,8 @@ Cennun fell-as.
 Ɣas ulamma tiktiwin d tmuɣliwin ɣef temsal n tudert d tsertit neɛdel.
 Ɛeddi tura ,kečč qerreb uwday ar lǧameɛ. 
 Ulac ula d aman i yuḍu. 
-Ur ssinen, ur ttnadin ad issinen. Lemmer mačči d kunwi i yi-selken, wissen amek ara teffeɣ fell-i.
+Ur ssinen, ur ttnadin ad issinen.
+Lemmer mačči d kunwi i yi-selken, wissen amek ara teffeɣ fell-i.
 Ugar n wanect-a i d-nesserwes. 
 Xeṛṣum llan wid yumnen yes-nneɣ. 
 S wigi i nezmer ad nbeddel azekka tiktiwin-agi yeggumman ad beddlent. 
@@ -325,7 +334,8 @@ Ismawen-nwen?
 Xdem leqdic akken iwata. 
 Gar-ak d yiman-ik a gma, fiḥel ma neẓra. 
 Yerna ayagi d ugur nniḍen. 
-Mačči kan deg usegmi ideg yella. Llan wid yessnen ad arun akken iwata maca taqbaylit ulac deg-sen maḍi.
+Mačči kan deg usegmi ideg yella.
+Llan wid yessnen ad arun akken iwata maca taqbaylit ulac deg-sen maḍi.
 Llan wiyaḍ akken am kečč swaswa.
 Ur fkin ara azal i tira am akken t-fkan i wawal. 
 Ahat qlilit wid i tent-yesdukklen i snat.
@@ -334,7 +344,8 @@ Ma yella ur ttuɣ ara.
 llan waḥid tlata neɣ ṛebɛa ttalin-d yall tameddit s lmal-nsen ad ksen. 
 D ayen iwatan. 
 Ma beddreɣ-d wigi ayaxir. 
-Ɛli ideflawen, Ferḥat, Yidir, Uleḥlu, Umengellat , d Belɛid tagrawla, ahat ttuɣ kra nniḍen. 
+Ɛli ideflawen, Ferḥat, Yidir, Uleḥlu d Umengellat i wigi umi sseleɣ aṭas . 
+Ahat ttuɣ kra nniḍen. 
 Ahat ttuɣ-ten-in deg lḥaṛa. 
 Awi-d aṭas seg-sent. 
 Awal-iw qerriḥ, d wa i d anaẓur. 
@@ -353,7 +364,8 @@ Ad t-tafeḍ s ufella n texzant.
 Zaɛma kan. 
 Kra n wid yettxemmim, yesnulfuyen ur sɛin amḍiq-nsen di tmurt-agi. 
 Ur yuksan ḥedd i t-yuɣen. 
-Wa maεḍur, wayeḍ d lḥeq-is. Nessaram-awen tazmert d tumert d wayen yelhan akk di tudert. 
+Wa maεḍur, wayeḍ d lḥeq-is.
+Nessaram-awen tazmert d tumert d wayen yelhan akk di tudert. 
 Ɣurek iman-ik a Mass, wigi ur sɛin aḥkim.
 Tuklaleḍ leqder, aṭas i t-qedceḍ. 
 Azul i yimeddukkal-ik i d-tbedreḍ. 
@@ -585,7 +597,8 @@ Di lekwaɣeḍ yemxallaf fell-asen.
 Leqbayel n servis d wid yeddan d iqeddacen n udabu azzayri mgal atmaten-is. 
 Ddan d Fransa 
 Yeznuzuy atmaten-is i timsulta Tazzayrit. 
-Yettqabal-iten-id s taḍsa d uqesseṛ. Yettqehhir-iten. 
+Yettqabal-iten-id s taḍsa d uqesseṛ. 
+Yettqehhir-iten. 
 Yettruẓu lḥerma n taddart. 
 Tura imi ɣran medden mačči-d am zik. 
 Yeǧǧa amḍiq-is i wiyaḍ. 
@@ -616,7 +629,8 @@ Ad iwali anwa i ixedmen ugar.
 Yessefk fell-ak ad txelṣeḍ leɣramat. 
 Ad aɣ-d-yini anda i yella deg tallit-nni n leḥris. 
 Anda i yella? 
-Wid yeddren tallit n umussu aɣerman n Leɛruc ttkukrun ad d-hedren, ad d-fken tirmit-nsen neɣ timuɣliwin-nsen ɣef wayen yeḍran. 
+Wid yeddren tallit n umussu aɣerman n Leɛruc ttkukrun ad d-hedren.
+Ad d-fken tirmit-nsen neɣ timuɣliwin-nsen ɣef wayen yeḍran. 
 Deg wayen i aɣ-yerzan nukni, ayen umi nezmer nexdem-it. 
 Neḥder-asent akk yerna. 
 Necceqrew-it netta akked wid yellan am netta. 
@@ -655,7 +669,7 @@ Ssalayen-tt-id at iɣallen tetten-tt at iɛebbaḍ.
 Anwa i yesmerkayen? 
 Nadit anda nniḍen. 
 Ur tezmirem ad tssimsem tezdeg. 
-Win issusfen s igenni deg wudem-is  ad uɣalent d aḥmal.
+Win issusfen s igenni deg wudem-is ad uɣalent fell-as d aḥemal.
 Cwiṭ am acemma, ikcem-d.
 Hattan imsultiyen kecmen ɣer yiwen d amakraḍ.
 Ɛnan-t taṣebḥit akken ad t-cekklen. 
@@ -690,7 +704,8 @@ A wi ixedmen lxir aṭas.
 Ddu s axxam! 
 D lxir meqqren ara nexdem. 
 Ad t-id-neǧǧ i tsutwin i d-iteddun.
-Aseggas-a nessaweḍ nessuli-t-id. Ma nedder ur nemmut ara. 
+Aseggas-a nessaweḍ nessuli-t-id. 
+Ma nedder ur nemmut ara. 
 Ma iṭṭuqqet leqdic ayaxir. 
 Uttekki deg usenfar yeldi i yal d tal yiwen neɣ yiwet yebɣan.
 Ad nizmir ad nesbedd tagduda n tlelliyin asmi ara nizmir ad nreṣṣi tiktiwin-agi deg-nneɣ.
@@ -922,3 +937,4 @@ Ad k-yig Ṛebbi d aseεdi.
 Giɣ-as isem "Mastan" i mmi.
 D tamerbuḥt d tasaɛdit. 
 Ɣas akken yerka deg idrimen. 
+Ziɣen yesɛa lḥeqq. 
