--- a/Kab_Tifyar 0.1
+++ b/Kab_Tifyar 0.1
@@ -746,7 +746,8 @@ Ndemeɣ imi s-nniɣ yakk anect-a.
 Ur tuklal ara. 
 Ur yuklal ara. 
 Ur tuklaleḍ ara awal. 
-Ndemeɣ imi i k-d-giɣ yakk uguren-a. Yendem imi ur s-yefki ara dḥis i leqraya-s.
+Ndemeɣ imi i k-d-giɣ yakk uguren-a. 
+Yendem imi ur s-yefki ara dḥis i leqraya-s.
 Wali-t kan, amzun d leɛmer yekcim aɣerbaz. 
 Asmi lliɣ deg uɣerbaz, ur faqeɣ ara yakk i tigi. 
 Amaziɣ yettban-d yendem, yesseḍḥa ɣef wayen yexdem. 
