--- a/Kab_Tifyar 0.3
+++ b/Kab_Tifyar 0.3
@@ -118,7 +118,7 @@ Yal tagnit di tudert-ik deg-s ayen yelhan d wayen n diri.
 Ladɣa deg akud-a yuɛren. 
 Ma tḥarceḍ ad tinigeḍ ar Fransa, Kanada. 
 Ma tebriḍ-as 
-ad as-ɛebbin kullec ɣef weɛrur-is, netta ad ten-yawi. 
+As as-ɛebbin kullec ɣef weɛrur-is, netta ad ten-yawi. 
 Ufiɣ-t yettawi iblaḍen ɣef tuyat-is. 
 Tikwal kan axaṭer diri-t s waṭas i tezmert. 
 Ma nessaram ad naẓ ar zdat. 
@@ -140,6 +140,7 @@ Amdan ur yufi ara iman-is.
 Anda yebɣu yerr tawwurt temdel fell-as. 
 Yessaweḍ arami yeggar ccek ɣef yiman-is. 
 Yeqqar d nekk kan i yesɛan. 
+Cceyyeɛ-n arrac. 
 Xusseɣ, ur sɛiɣ ara aswir yelhan. 
 S wakka ihi ur yufi ara irfiqen akken i s-yenwa. 
 Yesɛa tiqit n zzit. 
@@ -193,7 +194,7 @@ Azul d rbeḥ a yemma.
 Telha cwiṭ n tɣuri. 
 Sliɣ-as i tiɣri-m. 
 Tendeh yis-i. 
-ḥsiɣ daɣen ayagi ur yelli dayen i sehlen fell-awen. 
+Ḥsiɣ daɣen ayagi ur yelli dayen i sehlen fell-awen. 
 Tabrat-a ad tt-naru i mass Aɣilas.
 Ttekleɣ af yiman-iw. 
 Deg wul-im i ttidireɣ. 
@@ -209,7 +210,7 @@ Telliḍ-iyi-d tawwurt s teḍsa d lḥir.
 Ad i-yi-d-tzemmḍeḍ s idmaren-im. 
 Teqqur tasa-m. 
 Mi ara d-tekkreḍ, ssaki-yi-d. 
-Ad terzuḍ ɣer wussu-w ad iyi-n-tafeḍ. . 
+Ad terzuḍ ɣer wussu-w ad iyi-n-tafeḍ.
 Ad i-yi-tessakiḍ tanzayt zik. 
 Akken ad ruḥeɣ ɣer uɣerbaz ilaq-iyi idrimen ur sɛiɣ ara, ur sɛin imawlan-iw. 
 Sḥasfeɣ aṭas imi texṣer JSK. 
